turn all code for demo into functions

--- a/analysis_demo.ipynb
+++ b/analysis_demo.ipynb
@@ -70,7 +70,8 @@
    },
    "outputs": [],
    "source": [
-    "print percent explained variance"
+    "print percent explained variance\n",
+    "option to skip the comparison to the language datatset"
    ]
   },
   {
