simplify handeling of explore dataset + add comments

--- a/analysis_demo.ipynb
+++ b/analysis_demo.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "67442de2",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,10 @@
    "source": [
     "## Prerequisits\n",
     "\n",
-    "- environemnt set up as specified in the environnment.txt file in the corresponding github reposetory\n",
+    "- environemnt set up as specified in the environnment.txt file in the corresponding github repo\n",
     "- the code works with volumetric beta (effect) maps\n",
-    "- The data should be normalized MNI space and should be or otherwise will be resampled to the 2mm resolution, as this corresponds to the resolution of the receptor/tranporter densitieies provided\n",
-    "- the code assumes the fMRI beta (effect) map's names to be in the format: TaskName_Variable_effect_size_map.nii.gz\n"
+    "- the data should be normalized in MNI space and should be or otherwise will be resampled to the 2mm resolution, as this corresponds to the resolution of the receptor/tranporter densities provided\n",
+    "- the code assumes the fMRI beta (effect) map's names to be in the format: TASKNAME_VARIABLE_effect_size_map.nii.gz\n"
    ]
   },
   {
@@ -303,336 +303,7 @@
    "execution_count": null,
    "id": "db5e7177",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- CV for EncodeProb and confidence ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- Spin test for EncodeProb and confidence ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n",
-      "--- CV for subject 8 out of 26 ---\n",
-      "--- CV for subject 9 out of 26 ---\n",
-      "--- CV for subject 10 out of 26 ---\n",
-      "--- CV for subject 11 out of 26 ---\n",
-      "--- CV for subject 12 out of 26 ---\n",
-      "--- CV for subject 13 out of 26 ---\n",
-      "--- CV for subject 14 out of 26 ---\n",
-      "--- CV for subject 15 out of 26 ---\n",
-      "--- CV for subject 16 out of 26 ---\n",
-      "--- CV for subject 17 out of 26 ---\n",
-      "--- CV for subject 18 out of 26 ---\n",
-      "--- CV for subject 19 out of 26 ---\n",
-      "--- CV for subject 20 out of 26 ---\n",
-      "--- CV for subject 21 out of 26 ---\n",
-      "--- CV for subject 22 out of 26 ---\n",
-      "--- CV for subject 23 out of 26 ---\n",
-      "--- CV for subject 24 out of 26 ---\n",
-      "--- CV for subject 25 out of 26 ---\n",
-      "--- CV for subject 0 out of 26 ---\n",
-      "--- CV for subject 1 out of 26 ---\n",
-      "--- CV for subject 2 out of 26 ---\n",
-      "--- CV for subject 3 out of 26 ---\n",
-      "--- CV for subject 4 out of 26 ---\n",
-      "--- CV for subject 5 out of 26 ---\n",
-      "--- CV for subject 6 out of 26 ---\n",
-      "--- CV for subject 7 out of 26 ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spins = prepare_spins(paths, rec, n_spins=1000)\n",
     "\n",
